--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "it-buffer": "^0.1.3",
+    "it-pipe": "^1.1.0",
     "libp2p": "^0.33.0",
+    "libp2p-bootstrap": "^0.13.0",
+    "libp2p-mdns": "^0.17.0",
     "libp2p-mplex": "^0.10.4",
     "libp2p-noise": "^4.0.0",
-    "libp2p-tcp": "^0.17.2"
+    "libp2p-tcp": "^0.17.2",
+    "streaming-iterables": "^6.0.0",
+    "uint8arrays": "^3.0.0"
   }
 }
