--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "node ./example.js"
+    "example": "node ./example.js",
+    "build:proto": "pbjs -t static-module -w commonjs -r libp2p-fetch --force-number --no-verify --no-delimited --no-create --no-beautify --no-defaults --lint eslint-disable -o message.js ./message.proto"
   },
   "author": "",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "libp2p-mplex": "^0.10.4",
     "libp2p-noise": "^4.0.0",
     "libp2p-tcp": "^0.17.2",
+    "protobufjs": "^6.11.2",
     "streaming-iterables": "^6.0.0",
     "uint8arrays": "^3.0.0"
   }
