--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "it-buffer": "^0.1.3",
+    "it-length-prefixed": "^5.0.3",
     "it-pipe": "^1.1.0",
     "libp2p": "^0.33.0",
     "libp2p-bootstrap": "^0.13.0",
